2005-08-07 21:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Added new GormObjectInspector.gorm file.
	* English.lproj/GormObjectInspector.gorm: New file.
	* GormCore/GNUmakefile: Added new GormObjectInspector.h.
	* GormCore/GormObjectInspector.m: Now loads gorm file.
	* GormCore/GormObjectInspector.h: New file.
	* Gorm.m: Corrected comment in header.

2005-08-07 10:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Add new header file.
	* GormCore/GormConnectionInspector.m: Include new header.
	* GormCore/GormConnectionInspector.h: New file, split from .m

2005-08-07 08:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Added new file.
	* GormCore/GormInspectorsManager.m: Removed GormConnectionInspector.
	* GormCore/GormConnectionInspector.m: Split out from 
	GormInspectorsManager.m
	
2005-08-07 08:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m: Update version to 0.13.0
	* GormInfo.plist: Same

2005-08-06 22:25 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassInspector.gorm: Minor changes.
	* GNUmakefile: Added GormConnectionInspector.m
	* GormCore/GNUmakefile: Added the new resource manager.
	* GormCore/GormDocument.m: Changed to refer to the new resource
	manager.
	* GormCore/GormInspectorsManager.m: Removed hard coded gui.
	* GormCore/GormObjectEditor.m: Enabled copy/paste for objects in the
	object view.
	* GormCore/GormResourceManager.[hm]: Added to replace 
	GormViewResourceManager.[hm]
	* Palettes/3Containers/GormBrowserAttributesInspector.[hm]:
	Added code to handle maxVisibleColumnsField.  Corrected tag issue.
	* Palettes/3Containers/GormNSBrowserInspector.gorm:
	Added maximum visible columns field.
	
2005-08-06 18:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBInspector.m: Change to correct problem with revert call
	in setObject:.  It should call using self as the sender parameter, not